--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-    display: flex;
+    display: flex !important;
     justify-content: center;
     align-items: center;
     flex: 1;
